<resources>
    <string name="app_name">FoodBattle</string>
    <string name="welcome">歡迎回來</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="remember">記得我的帳號密碼</string>
    <string name="signIn">登入</string>
    <string name="register">註冊新帳號</string>
    <string name="check">檢查帳號</string>
    <string name="email">Email</string>
    <string name="check_password">確認密碼</string>
    <string name="go_to_login">已經有帳號？登入</string>
    <string name="sign_up">立即註冊</string>
    <string name="input_number">請輸入信箱收到的認證碼</string>
    <string name="ok">確認</string>
    <string name="resend">重新寄出</string>
    <string name="try_another">試試看別的信箱</string>
    <string name="send">寄出新的驗證碼</string>
    <string name="sucess">恭喜！驗證成功</string>
    <string name="next">下一步</string>
    <string name="fail">很可惜！驗證失敗</string>
    <string name="rewrite">重新輸入驗證碼</string>
    <string name="name">暱稱</string>
    <string name="style">料理風格</string>
    <string name="dish">拿手菜</string>
    <string name="introduce">自我介紹</string>
    <string name="skip">跳過</string>
    <string name="error_invalid_password">error_invalid_password</string>
    <string name="error_field_required">error_field_required</string>
    <string name="error_invalid_email">error_invalid_email</string>
    <string name="error_incorrect_password">error_incorrect_password</string>
    <string name="todo">TODO</string>

</resources>
