<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Setting"
    tools:layout_editor_absoluteY="81dp">


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/iconnn" />
    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="147dp"
        android:background="@drawable/rounded_edittext2"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext2"
        android:ems="10"
        android:hint="@string/style"
        android:inputType="textPersonName"
        android:padding="7dp"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_edittext2"
        android:ems="10"
        android:hint="@string/dish"
        android:inputType="textPersonName"
        android:padding="7dp"
        app:layout_constraintStart_toStartOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_edittext2"
        android:ems="10"
        android:hint="@string/introduce"
        android:inputType="textMultiLine"
        android:padding="7dp"
        app:layout_constraintStart_toStartOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editText7"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:background="@drawable/rounded_button"
        android:text="@string/skip"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8" />



</android.support.constraint.ConstraintLayout>