<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/line0"
        app:srcCompat="@color/darkGray"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@color/darkGray"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf"></LinearLayout>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="217dp">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/account"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"
                android:maxLines="1" />

            <EditText
                android:id="@+id/password"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/remember"
                android:textColor="@color/darkGray" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:text="@string/signIn"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/line"
        app:srcCompat="@color/darkGray"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@color/darkGray"
        tools:ignore="ContentDescription" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_weight="0.09">

        <TableRow
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="108dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/facebook"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="74dp"
                app:srcCompat="@drawable/google"
                tools:ignore="ContentDescription" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.26"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/register"
        android:textColor="@color/darkGray"
        android:textSize="20sp"
        tools:ignore="TextViewEdits" />

</LinearLayout>
