<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Email">

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext2"
        android:ems="10"
        android:hint="@string/input_number"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="79dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="74dp"
        android:background="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:srcCompat="@color/darkGray"
        tools:ignore="ContentDescription"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_button2"
        android:text="@string/resend"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:background="@drawable/rounded_edittext2"
        android:ems="10"
        android:hint="@string/try_another"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:layout_marginLeft="92dp"
        android:background="@drawable/rounded_button"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />
</android.support.constraint.ConstraintLayout>